# lovshot

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  editor.html  index.html  main.js  overlay.html  package.json  pnpm-lock.yaml  scroll-overlay.html  selector.html  vite.config.ts
.changeset/: add-cicd-release.md
.github/workflows/: release.yml
public/: selector.html
src/: App.css  App.tsx  Editor.tsx  RecordingOverlay.tsx  ScrollOverlay.tsx  Selector.tsx  Settings.tsx  overlay-main.tsx  recording-overlay.css  scroll-overlay-main.tsx  scroll-overlay.css  selector-main.tsx  selector.css  settings.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  shortcuts.rs  tray.rs  window_detect.rs  windows.rs
src-tauri/src/commands/: config.rs  export.rs  recording.rs  scroll.rs  selector.rs
