[package]
name = "lovshot"
version = "0.13.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lovshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.7"
gif = "0.13"
image = "0.25"
rustfft = "6.4"
num-complex = "0.4"
num-traits = "0.2"
chrono = "0.4"
dirs = "6"
base64 = "0.22"
mouse_position = "0.1"
tokio = { version = "1", features = ["rt"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-graphics = "0.24"
core-foundation = "0.10"
accessibility-sys = "0.1"

